propose changes * fix Sonar complain to improve readability and maintainability * use log instead of System.out.*